# All-Projects-Of-Tomer-Paz

./: README.md
AI Projects (Java)/Machine Learning/: DecisionTree.java  FilesReader.java  FilesWriter.java  KNN.java  LearningAlgorithm.java  MainAux.java  NaiveBase.java  Node.java  README.txt  java_ex2.java
AI Projects (Java)/Search Algorithms/: ALGORITHM.java  AlgoReturn.java  MainAux.java  Node.java  README.txt  details.txt  input.txt  java_ex1.java
Android(Java) Project/: README.txt
Android(Java) Project/Server/: Program.cs
C Projects/Final Project/: EXBackTracking.c  EXBackTracking.h  FILEInputOutput.c  FILEInputOutput.h  Game.c  Game.h  ILPSolver.c  ILPSolver.h  INFO.c  INFO.h  (+14 more)
C++ Projects/Generic Algorithms and Solutions with Client - Server - C++ Project/src/: AStar.h  AdapterSolverToIsearcher.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FastestPath.h  FastestPathFile.txt  FileCacheManager.h  HashMapI.h  HashSetI.h  HashSetStringState.h  HeuristicForAStar.h  HeuristicForBestFirstSearch.h  ISearchable.h  ISearcher.h  ISolutionable.h  Main.cpp  MyClientHandler.h  MyParallelServer.h  MyPriorityQueue.h  Queue.h  README.md  Searcher.h  Server.h  SolutionWithString.h  Solver.h  State.h  makefile
Communication Networks Projects(Python)/: README.txt
Desktop(C# XAML) Project/: README.txt
Operation Systems Projects(Multi Threading - C, bash)/: README.txt
Python Projects/: README.txt
Web(HTML5 JS Razor JQuery) Project/: README.txt
spotparking/: App.java  BackgroundServices.java  Constants.java  PlaceApi.java
(+501 files in other folders)
